--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,62 @@
         padding: 0;
         box-sizing: border-box;
     }
+    /* Navitem  */
+    .single-navitem{
+        display: flex;
+        align-items: center;
+        padding-inline: 1.5rem;
+        padding-block: .3rem;
+        position: relative;
+        &:hover{
+            color: rgb(27,156,227);
+        }
+        &:hover::before,&:hover::after{
+            width: 100%;
+            transition: width .4s ease;
+        }
+        &::before,&::after{
+            position: absolute  ;
+            content: '';
+            width:0%;
+            height:2%;
+            background-color: white;
+            transition: width .4s ease;
+        }
+        &::before{
+            top:0;
+            left: 0;    
+        }
+        &::after{
+           bottom: 0;
+           right: 0;  
+        }
+    }
+    .about-container:hover>.single-navitem>span{
+        color: #1b9ce3;
+    }
+
+    /*Hidden Navitem container*/
+    .hidden-navitems{
+     box-shadow: 0 0 6px #706f6f;
+    }
+    /* Hidden navitem  */
+    .hidden-navitems-navitem{
+        position: relative;
+        &::before{
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 0%;
+            width: 0px;
+            content: '';
+            background-color: #1b9ce3;
+            transition:  height 400ms ;
+        }
+        &:hover::before{
+            transition:  height 400ms ;
+            height: 100%;
+            width: 4px;
+        }
+    }
 }
