--- a/src/index.css
+++ b/src/index.css
@@ -8,39 +8,13 @@
         padding: 0;
         box-sizing: border-box;
     }
-    /* Navitem  */
-    .single-navitem{
-        display: flex;
-        align-items: center;
-        padding-inline: 1.5rem;
-        padding-block: .3rem;
-        position: relative;
-        &:hover{
-            color: rgb(27,156,227);
-        }
-        &:hover::before,&:hover::after{
-            width: 100%;
-            transition: width .4s ease;
-        }
-        &::before,&::after{
-            position: absolute  ;
-            content: '';
-            width:0%;
-            height:2%;
-            background-color: white;
-            transition: width .4s ease;
-        }
-        &::before{
-            top:0;
-            left: 0;    
-        }
-        &::after{
-           bottom: 0;
-           right: 0;  
-        }
+    /* About  */
+    .about-navitem-container>.about-navitem>span{
+        @apply transition-colors;
     }
-    .about-container:hover>.single-navitem>span{
+    .about-navitem-container:hover>.about-navitem>span{
         color: #1b9ce3;
+        @apply transition-colors;
     }
 
     /*Hidden Navitem container*/
